homeworks/Kubernetes CNI/ansible/files/manifests/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  containers:
    - image: wbitt/network-multitool
      name: network-multitool
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: backend
  name: backend
spec:
  containers:
    - image: wbitt/network-multitool
      name: network-multitool
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: cache
  name: cache
spec:
  containers:
    - image: wbitt/network-multitool
      name: network-multitool
      imagePullPolicy: IfNotPresent
