homeworks/Kubernetes CNI/ansible/files/manifests/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: cache
